@@ -2,6 +2,7 @@
 - Using VirtualEnv for local development and testing.
 - No longer installing system-wide config files (in /etc).
 - Fixed broken dependencies.
+- Removed manual handling of files uploaded via XMPP.
 
 2013/09/30 (1.2.2)
 - Fix permissions on config files during component startup.
